nivasa-macros/tests/trybuild/websocket_gateway_invalid_args.rs
use nivasa_macros::websocket_gateway;

#[websocket_gateway({ path: "/ws", room: "/chat" })]
struct InvalidGateway;

fn main() {}
